objects/Eligible_Tutor_Courses__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Eligible_Tutor_Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Course_ID__c</fullName>
        <formula>Course_Offering__r.hed__Course__r.hed__Course_ID__c</formula>
        <label>Course ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Name__c</fullName>
        <formula>Course_Offering__r.hed__Course__r.Name</formula>
        <label>Course Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Offering__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course Offering</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This course is not being offered for tutoring this semester.</errorMessage>
            <filterItems>
                <field>hed__Course_Offering__c.LWC_Tutor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>hed__Course_Offering__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Search for a course from the current semester course offerings.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipName>Eligible_Tutor_Courses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Section__c</fullName>
        <formula>Course_Offering__r.hed__Section_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Eligible Tutor Course</label><nameField>
        <displayFormat>ETC-{00000}</displayFormat>
        <label>ETC ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Eligible Tutor Courses</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Course_Offering__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>